<resources>
    <string name="app_name">Listas</string>
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="read">Read</string>
    <string name="id">Id</string>
    <string name="lista">Lista</string>
    <string name="title_activity_lista">ListaActivity</string>
</resources>
