<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danni.listas.main.MainActivity"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eId"
        android:textSize="20sp"
        android:hint="@string/id"/>
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/eName"
       android:textSize="20sp"
       android:hint="@string/name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eEmail"
        android:textSize="20sp"
        android:hint="@string/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ePhone"
        android:textSize="20sp"
        android:hint="@string/phone"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/bCreate"
        android:onClick="onClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/bUpdate"
        android:onClick="onClick"/>
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/read"
       android:id="@+id/bRead"
       android:onClick="onClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/bDelete"
        android:onClick="onClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lista"
        android:id="@+id/bLista"
        android:onClick="onClick"/>


</LinearLayout>
